Create img dir + 3 recipe html file

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="./recipes/lasagna.html">Lasagna</a>
+        <a href="./recipes/chipcookie.html">Chocolate Chip Cookies</a>
+        <a href="./recipes/fried-zucchini-chips.html">Air Fried Zucchini Chips</a>
     </body>
 </html>
