--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,1 +1,74 @@
-<h1>lasagna.html</h1>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Lasagna | The Odin Project</title>
+    </head>
+
+    <body>
+        <h1>Lasagna</h1>
+        <img src="../img/lasagna.jpg" width="400" alt="A slice of meat sauce lasagna">
+        <h2>Easy Lasagna Recipe</h2>
+        <p>We are long overdue for me to share my <strong>easy, lasagna recipe</strong>.</p>
+        <p>This recipe has simple ingredients but tons of flavor with a <strong>creamy ricotta mixture, savory meat sauce, and lots of mozzarella cheese</strong>.</p>
+        <p>It's a great freezer meal, make-ahead recipe, and leftovers freeze and reheat super well.</p>
+        <h3>Ingredients</h3>
+        <h4>Cheese Filling</h4>
+        <ul>
+            <li>15 oz. ricotta cheese, 2 cups</li>
+            <li>1 large egg</li>
+            <li>2 cups mozzarella cheese</li>
+            <li>3/4 cup Parmesan cheese, <em>freshly grated</em></li>
+            <li>2 teaspoons Italian seasoning</li>
+            <li>1/2 teaspoon salt</li>
+            <li>1/4 tsp pepper</li>
+        </ul>
+        <h4>Meat Sauce</h4>
+        <ul>
+            <li>1 tablespoon olive oil</li>
+            <li>1 yellow onion, <em>finely diced</em></li>
+            <li>1 1/2 lb. ground beef</li>
+            <li>3 cloves garlic</li>
+            <li>1/2 cup chicken broth</li>
+            <li>40 oz. marinara sauce</li>
+            <li> 1 tablespoon tomato paste</li>
+            <li>1 teaspoon hot sauce</li>
+        </ul>
+        <h4>Lasagna</h4>
+        <ul>
+            <li>12 lasagna noodles, <em>plus extra in case of breakage</em></li>
+            <li>2.5 cups mozzarella cheese</li>
+        </ul>
+        <h3>Steps</h3>
+        <h4>Prep Work</h4>
+        <ol>
+            <li>C<strong>Combine the cheese filling ingredients</strong> in a medium bowl and set aside. Measure out remaing ingredients.</li>
+        </ol>
+        <h4>Make the Meat Sauce</h4>
+        <ol>
+            <li><strong>Head olive oil</strong> over medium heat and <strong>add the diced onions.</strong> Let them soften for 10 minutes.</li>
+            <li><strong>Add the ground beef.</strong> and increase the heat to medium-high. Use a spatula to break up the meat so that it's very fine and crumbled. Cook for 8-10 minutes, or until cooked through. <strong>Add garlic</strong> during the last minute. Drain excess grease.</li>
+            <li><strong>Add the chicken broth</strong> and use a silicone spatula to "clean" the bottom and sides of the pot. <strong>Add the marinara sauce, tomato paste, hot sauce, and Worcestershire sauce.</strong> Bring to a boil, then reduce to a simmer. Cover partially and let the sauce simmer gently while you boil the pasta noodles.</li>
+        </ol>
+        <h4>Preheat Oven and Cook the Lasagna Noodles</h4>
+        <ol>
+            <li>Preheat oven to 375*.</li>
+            <li><strong>Begin boiling a large pot of salted pasta water</strong> for the lasagna noodles. Once a rapid boil is reached, <strong>cook the noodles to al dente</strong> according to package instructions. Gently stir with a wooden spoon throughout cooking to prevent the noodles from sticking. <strong>Drain and rinse with cold water</strong> until noodles are completely cool.</li>
+            <li>Lay the cooled noodles flat on wax or parchment paper while you begin assembling the lasagna.</li>
+        </ol>
+        <h4>Assemble</h4>
+        <ol>
+            <li><strong>Spread 1 heaping cup of meat sauce</strong> on the bottom of a 9 x 13-inch casserole dish. Next, <strong>add 4 lasagna noodles</strong>, overlapping them if needed.</li>
+            <li><string>Spread 1/3 of the ricotta cheese mixture</string> over the noodles, followed by about <strong>1 1/2 cups of meat sauce.</strong></li>
+            <li>Top with  <strong>4 more lasagna noodles, 1/3 of the ricotta cheese mixture, 1 1/2 cups meat sauce.</strong></li>
+            <li>Finish with <strong>4 more lasagn noodles, the rest of the ricotta mixture,</strong> and <strong>the rest of the meat sauce.</strong></li>
+            <li><strong>Top with 2 1/2 cups of Mozzarella cheese.</strong></li>
+            <li><strong>Spray foil with nonstick cooking spray</strong> and place it spray-side-down on top of the baking dish to prevent the cheese from sticking to it.</li>
+        </ol>
+        <h4>Bake</h4>
+        <ol>
+            <li><strong>Bake for 35 minutes.</strong> <em>Remove cover</em> and <strong>bake for 10 more minutes.</strong></li>
+            <li>Remove and garnish with fresh parsley. <strong>Let it sit for 15 minutes prior to serving</strong> to allow the layers to set. Serve with garlic bread with cheese.</li>
+        </ol>
+    </body>
+</html>
